--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -9,8 +9,8 @@ one:
   photo4: MyString
   photo5: MyString
   photo6: MyString
-  seller_id: 1
   price: 9.99
+  seller: one
 
 two:
   name: MyString
@@ -21,5 +21,5 @@ two:
   photo4: MyString
   photo5: MyString
   photo6: MyString
-  seller_id: 1
   price: 9.99
+  seller: two
