--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -3,11 +3,11 @@
 one:
   comments: MyString
   star_rating: 1
-  product_id: 1
-  user_id: 1
+  product: one
+  user: one
 
 two:
   comments: MyString
   star_rating: 1
-  product_id: 1
-  user_id: 1
+  product: two
+  user: two
